--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="css/normalize.8.0.1.min.css">
+	<link rel="stylesheet" href="css/style.min.css">
 	<title>Fitness</title>
 </head>
 
@@ -17,21 +19,25 @@
 				<nav class="menu">
 					<ul class="menu__list">
 						<li class="menu__item active">
-							<span class="menu__link">Главная</span>
+							<span class="menu__link menu__link--disp">Главная</span>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">Отзывы</a>
+							<a href="#" class="menu__link menu__link--star">Отзывы</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">Услуги</a>
+							<a href="#" class="menu__link menu__link--service">Услуги</a>
 						</li>
 					</ul>
 				</nav>
 
-				<div class="contacts">
+				<address class="contacts">
 					<a href="tel:+78000039210" class="contacts__phone">8 (800) 00-392-10</a>
 					<a href="#" class="contacts__timework">График работы</a>
-				</div><!-- .contacts -->
+					<div class="contacts__popup">
+						<div class="contacts__popup-days">пн-вс: 09:00-20:00</div>
+						<div class="contacts__popup-dinner">обед: 14:00-14:30</div>
+					</div><!-- .contacts__popup -->
+				</address><!-- .contacts -->
 			</div><!-- .container -->
 		</header>
 
@@ -56,8 +62,31 @@
 							</ul>
 						</li>
 
-						<li class="features__item"></li>
-						<li class="features__item"></li>
+						<li class="features__item">
+							<div class="features__img features__img--star"></div>
+							<h3 class="features__head">премиум-класс</h3>
+							<p class="features__subs">
+								Наш зал оборудован тренажёрами A-класса
+							</p>
+							<ul class="features__sublist">
+								<li class="features__plus">Качество</li>
+								<li class="features__plus">Продуктивность</li>
+								<li class="features__plus">Результат</li>
+							</ul>
+						</li>
+
+						<li class="features__item">
+							<div class="features__img features__img--star"></div>
+							<h3 class="features__head">личный тренер</h3>
+							<p class="features__subs">
+								Тренер сделает всёдля вашего результата
+							</p>
+							<ul class="features__sublist">
+								<li class="features__plus">Программа</li>
+								<li class="features__plus">Питание</li>
+								<li class="features__plus">План тренеровок</li>
+							</ul>
+						</li>
 					</ul>
 				</section><!-- .features -->
 
@@ -80,51 +109,73 @@
 									</div><!-- .review__block -->
 								</li>
 
-								<li class="review__item"></li>
-								<li class="review__item"></li>
-							</ul><!-- .review -->
+								<li class="review__item">
+									<img src=".." alt="avatar" class="review__img">
+									<div class="review__block">
+										<div class="review__date">01.02.2016</div>
+										<h3 class="review__title">Заражай друзей, получай призы!</h3>
+										<p class="review__text">
+											Дополнительно для Вас: пользование сауной и предоставление средств личной гигиены, пользование баром, таблица замеров, дружеская атмосфера и постоянная поддержка. Мы запотимся о вашем комфорте и предлагаем испытать это уже сегодня!
+										</p>
+									</div><!-- .review__block -->
+								</li>
 
-							<div class="pagination">
-								<span class="pagination__text">Страница 1 из 7</span>
-								<div class="pagination__navbar">
-									<a href="#" class="pagination__control disabled">&lsaquo;</a>
-									<ul class="pagination__list">
-										<li class="pagination__item active"><span class="pagination__link">1</span></li>
-										<li class="pagination__item"><a href="#" class="pagination__link">2</a></li>
-										<li class="pagination__item"><a href="#" class="pagination__link">3</a></li>
-										<li class="pagination__item"><a href="#" class="pagination__link">4</a></li>
-										<li class="pagination__item"><a href="#" class="pagination__link">5</a></li>
-										<li class="pagination__item"><a href="#" class="pagination__link">6</a></li>
-										<li class="pagination__item"><a href="#" class="pagination__link">7</a></li>
-									</ul>
-									<a href="#" class="pagination__control">&rsaquo;</a>
-								</div><!-- .pagination__navbar -->
-							</div><!-- .pagination -->
+								<li class="review__item">
+									<img src=".." alt="avatar" class="review__img">
+									<div class="review__block">
+										<div class="review__date">22.12.2015</div>
+										<h3 class="review__title">Фрилансер? Выпрями спину!</h3>
+										<p class="review__text">
+											Создайте рабочее место под себя. Вот этот инструмент поможет определить, что подходит именно вам и вашему организму. Используйте специальную подставку для ноутбука, если вы проводите за ним больше 2 часов. Настройте высоту и яркость монитора!
+										</p>
+									</div><!-- .review__block -->
+								</li>
+							</ul><!-- .review -->
 						</div><!-- .news__article -->
 
-						<aside class="news__top">
-							<h2 class="news__top-title">Топ новостей</h2>
-							<div class="news__top-month">за сентябрь</div>
+						<aside class="news-top">
+							<h3 class="news-top__title">
+								Топ новостей
+								<span class="news-top__month">за сентябрь</span>
+							</h3>
 
-							<ul class="news__top-list">
-								<li class="news__top-item">
-									<a href="#" class="news__top-link">
-										<img src=".." alt="news1" class="news__top-img">
+							<ul class="news-top__list">
+								<li class="news-top__item">
+									<a href="#" class="news-top__link">
+										<img src=".." alt="news1" class="news-top__img">
 									</a>
 								</li>
-								<li class="news__top-item">
-									<a href="#" class="news__top-link">
-										<img src=".." alt="news2" class="news__top-img">
+								<li class="news-top__item">
+									<a href="#" class="news-top__link">
+										<img src=".." alt="news2" class="news-top__img">
 									</a>
 								</li>
-								<li class="news__top-item">
-									<a href="#" class="news__top-link">
-										<img src=".." alt="news3" class="news__top-img">
+								<li class="news-top__item">
+									<a href="#" class="news-top__link">
+										<img src=".." alt="news3" class="news-top__img">
 									</a>
 								</li>
 							</ul>
 						</aside>
 					</div><!-- .news__block -->
+
+					<div class="pagination">
+						<span class="pagination__text">Страница 1 из 7</span>
+						<div class="pagination__navbar">
+							<a href="#" class="pagination__control disabled">&lsaquo;</a>
+							<ul class="pagination__list">
+								<li class="pagination__item active"><span class="pagination__link">1</span></li>
+								<li class="pagination__item"><a href="#" class="pagination__link">2</a></li>
+								<li class="pagination__item"><a href="#" class="pagination__link">3</a></li>
+								<li class="pagination__item"><a href="#" class="pagination__link">4</a></li>
+								<li class="pagination__item"><a href="#" class="pagination__link">5</a></li>
+								<li class="pagination__item"><a href="#" class="pagination__link">6</a></li>
+								<li class="pagination__item"><a href="#" class="pagination__link">7</a></li>
+							</ul>
+							<a href="#" class="pagination__control">&rsaquo;</a>
+						</div><!-- .pagination__navbar -->
+					</div><!-- .pagination -->
+
 				</section><!-- .news -->
 			</div><!-- .container -->
 		</div><!-- .center -->
