--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 						</li>
 
 						<li class="features__item">
-							<div class="features__img features__img--star"></div>
+							<div class="features__img features__img--palette"></div>
 							<h3 class="features__head">личный тренер</h3>
 							<p class="features__subs">
-								Тренер сделает всёдля вашего результата
+								Тренер сделает всё для вашего результата
 							</p>
 							<ul class="features__sublist">
 								<li class="features__plus">Программа</li>
@@ -97,7 +97,7 @@
 						<div class="news__article">
 							<ul class="review">
 								<li class="review__item">
-									<img src=".." alt="avatar" class="review__img">
+									<img src="images/avatar1.jpg" alt="avatar" class="review__img">
 									<div class="review__block">
 										<div class="review__date">12.10.2016</div>
 										<h3 class="review__title">Похудение с помощью бодибилдинга!</h3>
@@ -110,7 +110,7 @@
 								</li>
 
 								<li class="review__item">
-									<img src=".." alt="avatar" class="review__img">
+									<img src="images/avatar2.jpg" alt="avatar" class="review__img">
 									<div class="review__block">
 										<div class="review__date">01.02.2016</div>
 										<h3 class="review__title">Заражай друзей, получай призы!</h3>
@@ -121,7 +121,7 @@
 								</li>
 
 								<li class="review__item">
-									<img src=".." alt="avatar" class="review__img">
+									<img src="images/avatar3.jpg" alt="avatar" class="review__img">
 									<div class="review__block">
 										<div class="review__date">22.12.2015</div>
 										<h3 class="review__title">Фрилансер? Выпрями спину!</h3>
@@ -142,17 +142,17 @@
 							<ul class="news-top__list">
 								<li class="news-top__item">
 									<a href="#" class="news-top__link">
-										<img src=".." alt="news1" class="news-top__img">
+										<img src="images/news-top1.jpg" alt="news1" class="news-top__img">
 									</a>
 								</li>
 								<li class="news-top__item">
 									<a href="#" class="news-top__link">
-										<img src=".." alt="news2" class="news-top__img">
+										<img src="images/news-top2.jpg" alt="news2" class="news-top__img">
 									</a>
 								</li>
 								<li class="news-top__item">
 									<a href="#" class="news-top__link">
-										<img src=".." alt="news3" class="news-top__img">
+										<img src="images/news-top3.jpg" alt="news3" class="news-top__img">
 									</a>
 								</li>
 							</ul>
