add comments page + css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<span class="menu__link menu__link--disp">Главная</span>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link menu__link--star">Отзывы</a>
+							<a href="comments.html" class="menu__link menu__link--star">Отзывы</a>
 						</li>
 						<li class="menu__item">
 							<a href="#" class="menu__link menu__link--service">Услуги</a>
@@ -46,7 +46,7 @@
 				<div class="banner"></div>
 
 				<section class="features">
-					<h1 class="section-title">Особенности</h1>
+					<h1 class="section-title section-title--center">Особенности</h1>
 
 					<ul class="features__list">
 						<li class="features__item">
