add services page + css

--- a/comments.html
+++ b/comments.html
@@ -25,7 +25,7 @@
 							<span class="menu__link menu__link--star">Отзывы</span>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link menu__link--service">Услуги</a>
+							<a href="services.html" class="menu__link menu__link--service">Услуги</a>
 						</li>
 					</ul>
 				</nav>
