--- a/comments.html
+++ b/comments.html
@@ -22,7 +22,7 @@
 							<a href="index.html" class="menu__link menu__link--disp">Главная</a>
 						</li>
 						<li class="menu__item active">
-							<span class="menu__link menu__link--star">Отзывы</span>
+							<a href="#" class="menu__link menu__link--star">Отзывы</a>
 						</li>
 						<li class="menu__item">
 							<a href="services.html" class="menu__link menu__link--service">Услуги</a>
@@ -58,7 +58,9 @@
 
 					<ul class="review">
 						<li class="review__item">
-							<img src="images/comment1.jpg" alt="commentator" class="review__img">
+							<div class="review__img">
+								<img src="images/comment1.jpg" alt="commentator">
+							</div>
 							<div class="review__block">
 								<div class="review__date">12.10.2016</div>
 								<h3 class="review__title">Алексей Воронов</h3>
@@ -72,7 +74,9 @@
 						</li>
 
 						<li class="review__item">
-							<img src="images/comment2.jpg" alt="commentator" class="review__img">
+							<div class="review__img">
+								<img src="images/comment2.jpg" alt="commentator">
+							</div>
 							<div class="review__block">
 								<div class="review__date">01.02.2016</div>
 								<h3 class="review__title">Инна Смольная</h3>
@@ -86,7 +90,7 @@
 						</li>
 
 						<li class="review__item">
-							<img src="images/comment0.jpg" alt="commentator" class="review__img">
+							<div class="review__img"></div>
 							<div class="review__block">
 								<div class="review__date">22.12.2015</div>
 								<h3 class="review__title">Владимир Савельев</h3>
@@ -98,7 +102,9 @@
 						</li>
 
 						<li class="review__item">
-							<img src="images/comment3.jpg" alt="commentator" class="review__img">
+							<div class="review__img">
+								<img src="images/comment3.jpg" alt="commentator">
+							</div>
 							<div class="review__block">
 								<div class="review__date">14.08.2015</div>
 								<h3 class="review__title">Ирина Савина</h3>
@@ -117,7 +123,7 @@
 						<div class="pagination__navbar">
 							<a href="#" class="pagination__control disabled">&lsaquo;</a>
 							<ul class="pagination__list">
-								<li class="pagination__item active"><span class="pagination__link">1</span></li>
+								<li class="pagination__item active"><a href="#" class="pagination__link">1</a></li>
 								<li class="pagination__item"><a href="#" class="pagination__link">2</a></li>
 								<li class="pagination__item"><a href="#" class="pagination__link">3</a></li>
 								<li class="pagination__item"><a href="#" class="pagination__link">4</a></li>
