--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<nav class="menu">
 					<ul class="menu__list">
 						<li class="menu__item active">
-							<span class="menu__link menu__link--disp">Главная</span>
+							<a href="index.html" class="menu__link menu__link--disp">Главная</a>
 						</li>
 						<li class="menu__item">
 							<a href="comments.html" class="menu__link menu__link--star">Отзывы</a>
@@ -97,7 +97,9 @@
 						<div class="news__article">
 							<ul class="review">
 								<li class="review__item">
-									<img src="images/avatar1.jpg" alt="avatar" class="review__img">
+									<div class="review__img">
+										<img src="images/avatar1.jpg" alt="avatar">
+									</div>
 									<div class="review__block">
 										<div class="review__date">12.10.2016</div>
 										<h3 class="review__title">Похудение с помощью бодибилдинга!</h3>
@@ -110,23 +112,31 @@
 								</li>
 
 								<li class="review__item">
-									<img src="images/avatar2.jpg" alt="avatar" class="review__img">
+									<div class="review__img">
+										<img src="images/avatar2.jpg" alt="avatar">
+									</div>
 									<div class="review__block">
 										<div class="review__date">01.02.2016</div>
 										<h3 class="review__title">Заражай друзей, получай призы!</h3>
 										<p class="review__text">
-											Дополнительно для Вас: пользование сауной и предоставление средств личной гигиены, пользование баром, таблица замеров, дружеская атмосфера и постоянная поддержка. Мы запотимся о вашем комфорте и предлагаем испытать это уже сегодня!
+											Дополнительно для Вас: пользование сауной и предоставление средств личной гигиены, пользование
+											баром, таблица замеров, дружеская атмосфера и постоянная поддержка. Мы запотимся о вашем комфорте
+											и предлагаем испытать это уже сегодня!
 										</p>
 									</div><!-- .review__block -->
 								</li>
 
 								<li class="review__item">
-									<img src="images/avatar3.jpg" alt="avatar" class="review__img">
+									<div class="review__img">
+										<img src="images/avatar3.jpg" alt="avatar">
+									</div>
 									<div class="review__block">
 										<div class="review__date">22.12.2015</div>
 										<h3 class="review__title">Фрилансер? Выпрями спину!</h3>
 										<p class="review__text">
-											Создайте рабочее место под себя. Вот этот инструмент поможет определить, что подходит именно вам и вашему организму. Используйте специальную подставку для ноутбука, если вы проводите за ним больше 2 часов. Настройте высоту и яркость монитора!
+											Создайте рабочее место под себя. Вот этот инструмент поможет определить, что подходит именно вам и
+											вашему организму. Используйте специальную подставку для ноутбука, если вы проводите за ним больше
+											2 часов. Настройте высоту и яркость монитора!
 										</p>
 									</div><!-- .review__block -->
 								</li>
