--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
 							<a href="comments.html" class="menu__link menu__link--star">Отзывы</a>
 						</li>
 						<li class="menu__item active">
-							<span class="menu__link menu__link--service">Услуги</span>
+							<a href="services.html" class="menu__link menu__link--service">Услуги</a>
 						</li>
 					</ul>
 				</nav>
