--- a/services.html
+++ b/services.html
@@ -58,14 +58,15 @@
 
 					<ul class="services__block">
 						<li class="services__item">
-							<div class="services__item-img services__item-img--item1">
-								<a href="#" class="services__item-overlay">
-									<h2 class="services__item-title">фитнес</h2>
-								</a>
-							</div><!-- .services__item-img -->
+							<div class="services__img">
+								<img src="images/service1.jpg" alt="Фитнес">
+								<div class="services__overlay">
+									<h2 class="services__title">фитнес</h2>
+								</div>
+							</div><!-- .services__img -->
 
-							<h4 class="services__item-head">Фитнес</h4>
-							<p class="services__item-text">
+							<h4 class="services__head">Фитнес</h4>
+							<p class="services__text">
 								Фитнес - это основное направление в нашем центре. Открыто 6 залов для занятий с 7-00 до 22-00. Работают
 								24 фитнес-тренера, есть авторские и классические программы для похудения, восстановления фигуры,
 								здоровья и молодости. Занятия с персональным тренером помогут достичь максимального результата в сжатые
@@ -74,14 +75,15 @@
 						</li>
 
 						<li class="services__item">
-							<div class="services__item-img services__item-img--item2">
-								<a href="#" class="services__item-overlay">
-									<h2 class="services__item-title">диетолог</h2>
-								</a>
-							</div><!-- .services__item-img -->
+							<div class="services__img">
+								<img src="images/service2.jpg" alt="Диетолог">
+								<div class="services__overlay">
+									<h2 class="services__title">диетолог</h2>
+								</div>
+							</div><!-- .services__img -->
 
-							<h4 class="services__item-head">Личный диетолог</h4>
-							<p class="services__item-text">
+							<h4 class="services__head">Личный диетолог</h4>
+							<p class="services__text">
 								Поможет вам получить более заметный результат от тренировок. Создаст меню на каждый день, с учетом
 								вкусовых предпочтений и особенностей здоровья. Проанализирует текущий рацион и укажет на ошибки.
 								Поможет сделать питание разнообразным и полезным, объяснит доступно о важной роли тех или иных
@@ -90,14 +92,15 @@
 						</li>
 
 						<li class="services__item">
-							<div class="services__item-img services__item-img--item3">
-								<a href="#" class="services__item-overlay">
-									<h2 class="services__item-title">йога</h2>
-								</a>
-							</div><!-- .services__item-img -->
+							<div class="services__img">
+								<img src="images/service3.jpg" alt="Йога">
+								<div class="services__overlay">
+									<h2 class="services__title">йога</h2>
+								</div>
+							</div><!-- .services__img -->
 
-							<h4 class="services__item-head">Йога</h4>
-							<p class="services__item-text">
+							<h4 class="services__head">Йога</h4>
+							<p class="services__text">
 								Гармония души и тела – это базовая составляющая здоровья и красоты. Наш зал для занятий йоги открыт для
 								людей всех возрастов без ограничений. Отдельным направлением является йога для беременных с более
 								щадящей программой. Йога тренеры имеют сертификаты и являются победителями международных конкурсов..
@@ -105,14 +108,15 @@
 						</li>
 
 						<li class="services__item">
-							<div class="services__item-img services__item-img--item4">
-								<a href="#" class="services__item-overlay">
-									<h2 class="services__item-title">петли tpx</h2>
-								</a>
-							</div><!-- .services__item-img -->
+							<div class="services__img">
+								<img src="images/service4.jpg" alt="Петли ТРХ">
+								<div class="services__overlay">
+									<h2 class="services__title">петли tpx</h2>
+								</div>
+							</div><!-- .services__img -->
 
-							<h4 class="services__item-head">Петли ТРХ</h4>
-							<p class="services__item-text">
+							<h4 class="services__head">Петли ТРХ</h4>
+							<p class="services__text">
 								Новое направление для нашего центра, которое стало одним из самых популярных и востребованных. Программа
 								TRX Suspension Training создана для людей с начальным уровнем подготовки и позволяет эффективно
 								тренироваться, используя нарастающую нагрузку, которая зависит от силы и массы человека. Петли усиливают
@@ -121,14 +125,15 @@
 						</li>
 
 						<li class="services__item">
-							<div class="services__item-img services__item-img--item5">
-								<a href="#" class="services__item-overlay">
-									<h2 class="services__item-title">Кроссфит</h2>
-								</a>
-							</div><!-- .services__item-img -->
+							<div class="services__img">
+								<img src="images/service5.jpg" alt="Кроссфит">
+								<div class="services__overlay">
+									<h2 class="services__title">Кроссфит</h2>
+								</div>
+							</div><!-- .services__img -->
 
-							<h4 class="services__item-head">Кроссфит</h4>
-							<p class="services__item-text">
+							<h4 class="services__head">Кроссфит</h4>
+							<p class="services__text">
 								Авторская запатентованная программа тренировки, включающая элементы тяжелой атлетики, занятий с гирями,
 								гимнастики. Данная программа безупречно подходит для ежедневных тренировок людям с сидячим образом
 								жизни. Преимущество кроссфита в том, что он одинаково хорошо воспринимается и мужчинами, и женщинами и
@@ -138,14 +143,15 @@
 						</li>
 
 						<li class="services__item">
-							<div class="services__item-img services__item-img--item6">
-								<a href="#" class="services__item-overlay">
-									<h2 class="services__item-title">Бассейн</h2>
-								</a>
-							</div><!-- .services__item-img -->
+							<div class="services__img">
+								<img src="images/service6.jpg" alt="Бассейн">
+								<div class="services__overlay">
+									<h2 class="services__title">Бассейн</h2>
+								</div>
+							</div><!-- .services__img -->
 
-							<h4 class="services__item-head">Бассейн</h4>
-							<p class="services__item-text">
+							<h4 class="services__head">Бассейн</h4>
+							<p class="services__text">
 								Большой 50 метровый бассейн, разделенный на 6 дорожек, позволит заниматься индивидуальным плаванием или
 								аквааэробикой. Занятия проводит сертифицированный тренер – Ситник Ирина Валерьевна, известная своими
 								успехами в школе подготовки олимпийского резерва. В бассейне есть место для занятий с детьми (ежедневно
@@ -161,32 +167,32 @@
 					<ul class="partners__list">
 						<li class="partners__item">
 							<a href="#" class="partners__link">
-								<img src="images/partner1.png" alt="partner">
+								<img src="images/partner1.png" alt="Фламинго СПА-салон">
 							</a>
 						</li>
 						<li class="partners__item">
 							<a href="#" class="partners__link">
-								<img src="images/partner2.png" alt="partner">
+								<img src="images/partner2.png" alt="MALIBU">
 							</a>
 						</li>
 						<li class="partners__item">
 							<a href="#" class="partners__link">
-								<img src="images/partner3.png" alt="partner">
+								<img src="images/partner3.png" alt="LION">
 							</a>
 						</li>
 						<li class="partners__item">
 							<a href="#" class="partners__link">
-								<img src="images/partner4.png" alt="partner">
+								<img src="images/partner4.png" alt="ARNI спортивный клуб">
 							</a>
 						</li>
 						<li class="partners__item">
 							<a href="#" class="partners__link">
-								<img src="images/partner5.png" alt="partner">
+								<img src="images/partner5.png" alt="Гриф магазин">
 							</a>
 						</li>
 						<li class="partners__item">
 							<a href="#" class="partners__link">
-								<img src="images/partner6.png" alt="partner">
+								<img src="images/partner6.png" alt="Атлетика">
 							</a>
 						</li>
 					</ul><!-- .partners__list -->
