--- a/comments.html
+++ b/comments.html
@@ -154,7 +154,7 @@
 				<h2 class="section-title section-title--form">Оставить отзыв</h2>
 
 				<form class="feedback-form">
-					<div class="feedback-form__top">
+					<div class="feedback-form__row">
 						<label class="feedback-form__item">
 							<span class="feedback-form__head">Ваше имя</span>
 							<input type="text" name="username" class="feedback-form__input" required placeholder="Андрей">
@@ -164,15 +164,17 @@
 							<span class="feedback-form__head">Ссылка на профиль VK</span>
 							<input type="text" name="userurl" class="feedback-form__input" required placeholder="vk.com/example">
 						</label>
-					</div><!-- .feedback-form__top -->
+					</div><!-- .feedback-form__row -->
 
-					<label class="feedback-form__item">
-						<span class="feedback-form__head">Текст отзыва</span>
-						<textarea name="usertext" class="feedback-form__input feedback-form__input--textarea" required
-							placeholder="Мне понравилось"></textarea>
-					</label>
+					<div class="feedback-form__row">
+						<label class="feedback-form__item">
+							<span class="feedback-form__head">Текст отзыва</span>
+							<textarea name="usertext" class="feedback-form__input feedback-form__input--textarea" required
+								placeholder="Мне понравилось"></textarea>
+						</label>
+					</div><!-- .feedback-form__row -->
 
-					<div class="feedback-form__bottom">
+					<div class="feedback-form__row">
 						<div class="feedback-form__item">
 							<span class="feedback-form__head">Отображать фото в отзыве?</span>
 
@@ -195,8 +197,11 @@
 							</div><!-- .feedback-form__radio-block -->
 						</div><!-- .feedback-form__item -->
 
-						<button type="submit" class="feedback-form__btn">Отправить</button>
-					</div><!-- .feedback-form__bottom -->
+						<div class="feedback-form__buttons">
+							<button type="submit" class="feedback-form__btn">Отправить</button>
+						</div>
+						
+					</div><!-- .feedback-form__row -->
 				</form>
 			</div><!-- .container-form -->
 		</section><!-- .feedback -->
