add welcome page + animation

--- a/services.html
+++ b/services.html
@@ -5,21 +5,20 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="css/normalize.8.0.1.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
-	<title>Fitness</title>
+	<title>Fitness | Услуги</title>
 </head>
 
 <body>
 	<div class="wrapper">
 		<header class="header">
 			<div class="container">
-				<a href="index.html" class="logo">Афродита</a>
+				<a href="main.html" class="logo">Афродита</a>
 
 				<nav class="menu">
 					<ul class="menu__list">
 						<li class="menu__item">
-							<a href="index.html" class="menu__link menu__link--disp">Главная</a>
+							<a href="main.html" class="menu__link menu__link--disp">Главная</a>
 						</li>
 						<li class="menu__item">
 							<a href="comments.html" class="menu__link menu__link--star">Отзывы</a>
@@ -46,7 +45,7 @@
 
 				<ul class="breadcrumbs">
 					<li class="breadcrumbs__item">
-						<a href="index.html" class="breadcrumbs__link">Главная</a>
+						<a href="main.html" class="breadcrumbs__link">Главная</a>
 					</li>
 					<li class="breadcrumbs__item">
 						<span class="breadcrumbs__current">Услуги</span>
@@ -67,9 +66,11 @@
 
 							<h4 class="services__head">Фитнес</h4>
 							<p class="services__text">
-								Фитнес - это основное направление в нашем центре. Открыто 6 залов для занятий с 7-00 до 22-00. Работают
+								Фитнес - это основное направление в нашем центре. Открыто 6 залов для занятий с 7-00 до 22-00.
+								Работают
 								24 фитнес-тренера, есть авторские и классические программы для похудения, восстановления фигуры,
-								здоровья и молодости. Занятия с персональным тренером помогут достичь максимального результата в сжатые
+								здоровья и молодости. Занятия с персональным тренером помогут достичь максимального результата в
+								сжатые
 								сроки.
 							</p>
 						</li>
@@ -101,7 +102,8 @@
 
 							<h4 class="services__head">Йога</h4>
 							<p class="services__text">
-								Гармония души и тела – это базовая составляющая здоровья и красоты. Наш зал для занятий йоги открыт для
+								Гармония души и тела – это базовая составляющая здоровья и красоты. Наш зал для занятий йоги открыт
+								для
 								людей всех возрастов без ограничений. Отдельным направлением является йога для беременных с более
 								щадящей программой. Йога тренеры имеют сертификаты и являются победителями международных конкурсов..
 							</p>
@@ -117,9 +119,11 @@
 
 							<h4 class="services__head">Петли ТРХ</h4>
 							<p class="services__text">
-								Новое направление для нашего центра, которое стало одним из самых популярных и востребованных. Программа
+								Новое направление для нашего центра, которое стало одним из самых популярных и востребованных.
+								Программа
 								TRX Suspension Training создана для людей с начальным уровнем подготовки и позволяет эффективно
-								тренироваться, используя нарастающую нагрузку, которая зависит от силы и массы человека. Петли усиливают
+								тренироваться, используя нарастающую нагрузку, которая зависит от силы и массы человека. Петли
+								усиливают
 								ловкость, гибкость и подвижность. В нашем центре проводятся индивидуальные и групповые тренировки ТРХ.
 							</p>
 						</li>
@@ -134,7 +138,8 @@
 
 							<h4 class="services__head">Кроссфит</h4>
 							<p class="services__text">
-								Авторская запатентованная программа тренировки, включающая элементы тяжелой атлетики, занятий с гирями,
+								Авторская запатентованная программа тренировки, включающая элементы тяжелой атлетики, занятий с
+								гирями,
 								гимнастики. Данная программа безупречно подходит для ежедневных тренировок людям с сидячим образом
 								жизни. Преимущество кроссфита в том, что он одинаково хорошо воспринимается и мужчинами, и женщинами и
 								подходит для семейных групповых тренировок. Высокая эффективности программы обусловлена чуткими
@@ -152,9 +157,11 @@
 
 							<h4 class="services__head">Бассейн</h4>
 							<p class="services__text">
-								Большой 50 метровый бассейн, разделенный на 6 дорожек, позволит заниматься индивидуальным плаванием или
+								Большой 50 метровый бассейн, разделенный на 6 дорожек, позволит заниматься индивидуальным плаванием
+								или
 								аквааэробикой. Занятия проводит сертифицированный тренер – Ситник Ирина Валерьевна, известная своими
-								успехами в школе подготовки олимпийского резерва. В бассейне есть место для занятий с детьми (ежедневно
+								успехами в школе подготовки олимпийского резерва. В бассейне есть место для занятий с детьми
+								(ежедневно
 								с 12-00 до 14-00), а также проводится аквааэробика для беременных каждый день в 10-00 и 19-00.
 							</p>
 						</li>
@@ -213,7 +220,7 @@
 					</p>
 				</div><!-- .info -->
 
-				<a href="index.html" class="logo">Афродита</a>
+				<a href="main.html" class="logo">Афродита</a>
 
 				<div class="social">
 					<h3 class="social__title">Наши социальные сети</h3>
