--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="icon" type="image/png" href="images/favicon.png">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Афродита | Главная</title>
 </head>
@@ -13,7 +14,7 @@
 	<div class="wrapper">
 		<header class="header">
 			<div class="container container--flex">
-				<span class="logo">Афродита</span>
+				<span class="logo logo--main">Афродита</span>
 
 				<address class="contacts">
 					<a href="tel:+78000039210" class="contacts__phone">8 (800) 00-392-10</a>
@@ -207,7 +208,7 @@
 					</p>
 				</div><!-- .info -->
 
-				<span class="logo">Афродита</span>
+				<span class="logo logo--main">Афродита</span>
 			</div><!-- .container -->
 		</footer>
 	</div><!-- .wrapper -->
